[FIXED] Recipe for Titanium Niobium Carbide Dynamo Mainblock.
[FIXED] Recipe for Titanium Niobium Carbide Turbine Mainblock.
[FIXED] Recipes for Large Mass Fab and Mass Replicator Mainblocks are the same.
[FIXED] When centrifuging energy crystal dust you can get more sapphire dust.
[FIXED[ TerraFirmaCraft and TerraFirmaCraft Plus rocks and ores cannot be harvested by GT pickaxes and drills.
[CHANGED] The Mod name is now 'GregTech 6 Unofficial' to avoid ambiguity.
[CHANGED] Thanks to Greg notifying me that dust not being able to put into Extruders will cause plastic and similar materials cannot be processed into capsules, etc. I reverted the change so Extruders can process them now again.
[CHANGED] Fusion Reactor Mk1 now requires LU for start energy and EU for the maintaining energy. Since a Tokamak design is used here, electricity should be used to maintain the current in the coils.
[CHANGED] PVC production yield now decrease.
[CHANGED] There is now a config option to choose whether Long distance pipes can be crafted with less material.
[ADDED] Biology Item Group.
[ADDED] Draining Well. A Multiblock that drains water from underground using RU. This is an alternative to Infinite Water for some modpacks.
[ADDED] Main tech tree Achievement Page and some Achievements.
[WIP] Biochemical Research Laboratory.

6.14.01:
[NOTE] Do not use 6.14.00, it will crash the game.
[MERGED]Merged official branch 6.13.01
| 6.13.01:
| [FIXED] a Bug that crashes every single Crafting Recipe, sorry about that lol.
| [FIXED] Some Localisation Issues with Reika's Fluids, it should be fine now. It will work with all other Unlocalized Fluids too, so GT6 will display the most proper Fluid Name that it can display now.
| 6.13.00
| [NOTE] Sorry for letting this one take so long.
| [NOTE] I got a report that Riverwater, Swampwater and Oceanwater cannot be scanned with the Thaumometer, I can not replicate that Issue though, so I guess it is either fixed or something is wrong with their Modpack.