@@ -1164,7 +1164,7 @@ public class Loader_MultiTileEntities implements Runnable {
 
 		aMat = MT.Al;                   aRegistry.add("Frost Proof Machine Casing"                          , "Multiblock Machines", 18112, 17101, aClass                                   , aMat.mToolQuality, 64, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,  10.0F, NBT_RESISTANCE,  10.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "distillationtowerparts"  , NBT_DESIGNS, 7), "DhD", "DMD", "DwD", 'M', aRegistry.getItem(18002), 'D', OP.plate.dat(MT.Al));
 		aMat = MT.StainlessSteel;       aRegistry.add("Cracking Tower Part"                                 , "Multiblock Machines", 18113, 17101, aClass                                   , aMat.mToolQuality, 64, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,   6.0F, NBT_RESISTANCE,   6.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "distillationtowerparts"  , NBT_DESIGNS, 1), "hTd", "PMP", 'M', OP.plate.dat(aMat), 'P', OP.pipeSmall.dat(aMat), 'T', aRegistry.getItem(18002));
-		aMat = MT.StainlessSteel;       aRegistry.add("Clean StainlessSteel Machine Casing"                 , "Multiblock Machines", 18114, 17101, aClass                                   , aMat.mToolQuality, 64, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,   6.0F, NBT_RESISTANCE,   6.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "metalwalldense"          , NBT_DESIGNS, 7), "WWW", "WwW", "WWW", 'W', OP.plateDouble.dat(aMat));
+		aMat = MT.StainlessSteel;       aRegistry.add("Clean StainlessSteel Machine Casing"                 , "Multiblock Machines", 18114, 17101, aClass                                   , aMat.mToolQuality, 64, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,   6.0F, NBT_RESISTANCE,   6.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "metalwalldense"          , NBT_DESIGNS, 7), "WWW", "DwD", "WWW", 'W', OP.plateDouble.dat(aMat), 'D', OP.stick.dat(aMat));
 		aMat = MT.Rubber;               aRegistry.add("Electrical Proof Machine Casing"                     , "Multiblock Machines", 18115, 17101, aClass                                   , aMat.mToolQuality, 64, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,  10.0F, NBT_RESISTANCE,  10.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "metalwalldense"          , NBT_DESIGNS, 7), "DhD", "DMD", "DwD", 'M', aRegistry.getItem(18039), 'D', OP.plateDense.dat(MT.Rubber));
 		aMat = MT.StainlessSteel;       aRegistry.add("Aligner Unit"                                        , "Multiblock Machines", 18116, 17101, aClass                                   , aMat.mToolQuality, 64, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,   6.0F, NBT_RESISTANCE,   6.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "alignerunit"             , NBT_DESIGNS, 7), "WwW", "WMW", "CCC", 'M', OP.casingMachine.dat(aMat), 'W', OP.wireGt01.dat(MT.Cu), 'C', OD_CIRCUITS[4]);
 		aMat = MT.Osmiridium;           aRegistry.add("Mass Spectrometer Module"                            , "Multiblock Machines", 18117, 17101, aClass                                   , aMat.mToolQuality, 64, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,  10.0F, NBT_RESISTANCE,  10.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "massspectrometermodule"  , NBT_DESIGNS, 0), "CPC", "WMW", "CPC", 'M', OP.casingMachine.dat(aMat), 'W', OP.wireGt08.dat(MT.Os), 'C', IL.Processor_Crystal_Diamond, 'P', IL.FIELD_GENERATORS[5]);
@@ -1232,7 +1232,7 @@ public class Loader_MultiTileEntities implements Runnable {
 		aMat = MT.Al;                   aRegistry.add("Cryo Distillation Tower"                             , "Multiblock Machines", 17111, 17101, MultiTileEntityCryoDistillationTower.class,aMat.mToolQuality, 16, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,   6.0F, NBT_RESISTANCE,   6.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "cryodistillationtower"   , NBT_INPUT,  512, NBT_INPUT_MIN,   64, NBT_INPUT_MAX,     1024                       , NBT_ENERGY_ACCEPTED, TD.Energy.CU, NBT_RECIPEMAP, RM.CryoDistillationTower, NBT_INV_SIDE_AUTO_OUT, SIDE_BACK  , NBT_TANK_SIDE_AUTO_OUT, SIDE_BACK  , NBT_CHEAP_OVERCLOCKING, T                                                                       ), "PPP", "PMP", "PPP", 'M', aRegistry.getItem(18112), 'P', OP.pipeNonuple.dat(ANY.Cu));
 		aMat = MT.StainlessSteel;       aRegistry.add("Cracking Tower"                                      , "Multiblock Machines", 17115, 17101, MultiTileEntityCrackingTower.class       , aMat.mToolQuality, 16, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,   6.0F, NBT_RESISTANCE,   6.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "distillationtower"       , NBT_INPUT, 2048, NBT_INPUT_MIN,  128, NBT_INPUT_MAX,     4096                       , NBT_ENERGY_ACCEPTED, TD.Energy.HU, NBT_RECIPEMAP, RM.CrackingTower        , NBT_INV_SIDE_AUTO_OUT, SIDE_BACK  , NBT_TANK_SIDE_AUTO_OUT, SIDE_BACK  , NBT_CHEAP_OVERCLOCKING, T                                                                       ), "PPP", "PMP", "PPP", 'M', aRegistry.getItem(18113), 'P', OP.pipeNonuple.dat(aMat));
 		aMat = MT.TungstenSteel;        aRegistry.add("Implosion Compressor"                                , "Multiblock Machines", 17110, 17101, MultiTileEntityImplosionCompressor.class , aMat.mToolQuality, 16, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,  12.5F, NBT_RESISTANCE,  12.5F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "implosioncompressor"     , NBT_INPUT,  512, NBT_INPUT_MIN,   64, NBT_INPUT_MAX,     4096                       , NBT_ENERGY_ACCEPTED, TD.Energy.EU, NBT_RECIPEMAP, RM.ImplosionCompressor  , NBT_INV_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_TANK_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_CHEAP_OVERCLOCKING,    NBT_PARALLEL,  64,                                                  T), "CPC", "PAP", "RMR", 'M', aRegistry.getItem(18023), 'R', IL.Processor_Crystal_Ruby, 'C', OD_CIRCUITS[6], 'P', OP.plateDense.dat(aMat), 'A', IL.ROBOT_ARMS[2]);
-		aMat = MT.StainlessSteel;       aRegistry.add("Oil Cleaner"                                         , "Multiblock Machines", 17116, 17101, MultiTileEntityOilCleaner.class          , aMat.mToolQuality, 16, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,  12.5F, NBT_RESISTANCE,  12.5F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "distillationtower"       , NBT_INPUT,   64, NBT_INPUT_MIN,   64, NBT_INPUT_MAX,     4096                       , NBT_ENERGY_ACCEPTED, TD.Energy.EU, NBT_RECIPEMAP, RM.OilCleaner           , NBT_INV_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_TANK_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_CHEAP_OVERCLOCKING, T, NBT_PARALLEL,  32,                                                  T), "PPP", "PMP", "CPC", 'M', aRegistry.getItem(18022), 'P', OP.pipeNonuple.dat(aMat),  'C', OD_CIRCUITS[2]);
+		aMat = MT.StainlessSteel;       aRegistry.add("Fuel Cleaner"                                        , "Multiblock Machines", 17116, 17101, MultiTileEntityOilCleaner.class          , aMat.mToolQuality, 16, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,  12.5F, NBT_RESISTANCE,  12.5F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "distillationtower"       , NBT_INPUT,   64, NBT_INPUT_MIN,   64, NBT_INPUT_MAX,     4096                       , NBT_ENERGY_ACCEPTED, TD.Energy.EU, NBT_RECIPEMAP, RM.OilCleaner           , NBT_INV_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_TANK_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_CHEAP_OVERCLOCKING, T, NBT_PARALLEL,  32,                                                  T), "PPP", "PMP", "CPC", 'M', aRegistry.getItem(18022), 'P', OP.pipeLarge.dat(aMat),  'C', OD_CIRCUITS[2]);
 		aMat = MT.Osmiridium;           aRegistry.add("Molecular Scanner"                                   , "Multiblock Machines", 17117, 17101, MultiTileEntityMolecularScanner.class    , aMat.mToolQuality, 16, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,   6.0F, NBT_RESISTANCE,   6.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "molecular"               , NBT_INPUT,    1, NBT_INPUT_MIN,    1, NBT_INPUT_MAX,  2097152                       , NBT_ENERGY_ACCEPTED, TD.Energy.QU, NBT_RECIPEMAP, RM.ScannerMolecular     , NBT_INV_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_TANK_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_CHEAP_OVERCLOCKING, T,                    NBT_PARALLEL_DURATION, T, NBT_NO_CONSTANT_POWER, T), "FFF", "FMF", "FFF", 'M', aRegistry.getItem(18014), 'F', IL.FIELD_GENERATORS[4]);
 		aMat = MT.Pb;                   aRegistry.add("Large Matter Replicator"                             , "Multiblock Machines", 17118, 17101, MultiTileEntityMatterReplicator.class    , aMat.mToolQuality, 16, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,   6.0F, NBT_RESISTANCE,   6.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "largerepfab"             , NBT_INPUT,    1, NBT_INPUT_MIN,    1, NBT_INPUT_MAX,  2097152                       , NBT_ENERGY_ACCEPTED, TD.Energy.QU, NBT_RECIPEMAP, RM.Replicator           , NBT_INV_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_TANK_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_CHEAP_OVERCLOCKING, T, NBT_PARALLEL,  64, NBT_PARALLEL_DURATION, T, NBT_NO_CONSTANT_POWER, T), "F F", "FMF", "FFF", 'M', aRegistry.getItem(18031), 'F', IL.FIELD_GENERATORS[6]);
 		aMat = MT.StainlessSteel;       aRegistry.add("Industry Coke Oven"                                  , "Multiblock Machines", 17119, 17101, MultiTileEntityPyrolyseOven.class        , aMat.mToolQuality, 16, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,   5.0F, NBT_RESISTANCE,   5.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "largeoven"               , NBT_INPUT,   64, NBT_INPUT_MIN,   64, NBT_INPUT_MAX,     4096                       , NBT_ENERGY_ACCEPTED, TD.Energy.EU, NBT_RECIPEMAP, RM.CokeOven             , NBT_INV_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_TANK_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_CHEAP_OVERCLOCKING, T, NBT_PARALLEL,  64, NBT_PARALLEL_DURATION,                           T), "PPP", "PwP", "CMC", 'M', aRegistry.getItem(18002), 'C', OD_CIRCUITS[4], 'P', OP.plateDense.dat(aMat));
